--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/router": "~9.1.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "bootstrap": "^4.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
@@ -43,5 +44,6 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+    
   }
 }
